add chatlist ui/ some util: scrollbar, avatar

--- a/src/style/contacts.css
+++ b/src/style/contacts.css
@@ -1,4 +1,4 @@
-.contact {
+.contacts {
   background-color: red;
   width: var(--content-width-small);
   height: calc(100% - 2 * var(--spacing-content));
