--- a/src/style/index.css
+++ b/src/style/index.css
@@ -31,15 +31,16 @@
   --avatar-small: 50px;
   --avatar-x-small: 40px;
 
-  --border-radius: 5px;
+  --border-radius: 3px;
 
-  --font-size-1: 3.6rem;
+  --font-size-1: 3.2rem;
   --font-size-2: 2rem;
   --font-size-3: 1.8rem;
   --font-size-4: 1.6rem;
   --font-size-4-2: 1.45rem;
   --font-size-5: 1.4rem;
   --font-size-6: 1.2rem;
+  --font-size-7: 1rem;
 
   --font-weight-bold: 700;
   --font-weight-medium: 500;
@@ -57,7 +58,7 @@
   --spacing-12: 48px;
   --spacing-content: 16px;
 
-  --content-width-small: 300px;
+  --content-width-small: 320px;
 
   --header-height: 120px;
   --navbar-height: 31px;
@@ -144,10 +145,44 @@ input::placeholder {
   opacity: 0.4;
 }
 
+.input-icon--dark input {
+  outline: none;
+  border: none;
+  background-color: var(--text-bold-color);
+  color: var(--white-color);
+}
+
+.input-icon--search {
+  margin: var(--spacing-5) 0;
+}
+
+.input-icon__icon--clear {
+  display: none;
+}
+
+.input-icon--search .input-icon__input:focus ~ .input-icon__icon--right {
+  display: none;
+}
+
+.input-icon--search .input-icon__input:focus ~ .input-icon__icon--clear {
+  display: block;
+}
+
+/* Icon */
+.icon--margin-right {
+  margin-right: var(--spacing-2);
+}
+
 /* Text */
 
 .text--header {
   font-size: var(--font-size-1);
+  font-weight: var(--font-weight-bold);
+  line-height: 4.8rem;
+}
+
+.text--header-2 {
+  font-size: var(--font-size-2);
   font-weight: var(--font-weight-bold);
   line-height: 4.8rem;
 }
@@ -212,4 +247,131 @@ input::placeholder {
   background: var(--linear-color);
   border: none;
   color: var(--white-color);
+}
+
+/* avatar size */
+.avatar {
+  border-radius: 100%;
+  position: relative;
+  transition: all 0.3s ease;
+  background-color: var(--white-color);
+  flex-shrink: 0;
+}
+
+.avatar--big {
+  width: var(--avatar-big);
+  height: var(--avatar-big);
+  padding: var(--spacing-1);
+}
+
+.avatar--medium {
+  width: var(--avatar-medium);
+  height: var(--avatar-medium);
+  padding: 2px;
+}
+
+.avatar--small {
+  width: var(--avatar-small);
+  height: var(--avatar-small);
+  padding: 1px;
+}
+
+.avatar--x-small {
+  width: var(--avatar-x-small);
+  height: var(--avatar-x-small);
+  padding: 1px;
+}
+
+.avatar img {
+  width: 100%;
+  border-radius: 100%;
+  transition: all 0.3s ease;
+  flex-shrink: 0;
+}
+
+/* multible imgs avatar*/
+.avatar--double-img {
+  background-color: transparent;
+}
+
+.avatar--double-img img {
+  width: 65%;
+}
+
+.avatar--double-img img:nth-child(1) {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.avatar--double-img img:nth-child(2) {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+/* avatar status */
+.user-active-dots::after {
+  content: "";
+  position: absolute;
+  transition: all 0.3s ease;
+  border-radius: 100%;
+  background-color: var(--green-color);
+}
+
+.avatar--big.user-active-dots::after {
+  bottom: -3px;
+  right: 5px;
+  width: 20px;
+  height: 20px;
+  border: 2px solid var(--white-color);
+}
+
+.avatar--medium.user-active-dots::after {
+  bottom: -2px;
+  right: 3px;
+  width: 12px;
+  height: 12px;
+  border: 2px solid var(--white-color);
+}
+
+.avatar--small.user-active-dots::after {
+  bottom: -2px;
+  right: 2px;
+  width: 10px;
+  height: 10px;
+  border: 2px solid var(--white-color);
+}
+
+.avatar--x-small.user-active-dots::after {
+  bottom: -2px;
+  right: 2px;
+  width: 8px;
+  height: 8px;
+  border: 2px solid var(--white-color);
+}
+
+/* scrollbar style  */
+::-webkit-scrollbar {
+  width: 18px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: var(--border-radius);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--text-light-color);
+  border-radius: 18px 10px 10px 18px;
+  border: 1px solid rgba(0, 0, 0, 0);
+  border-left: 7px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--primary-color);
+  border-radius: 18px 10px 10px 18px;
+  border: 1px solid rgba(0, 0, 0, 0);
+  border-left: 7px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
 }
