--- a/src/style/index.css
+++ b/src/style/index.css
@@ -12,6 +12,7 @@
   --border-color: rgb(151, 151, 151, 0.2);
 
   --red-color: #e42424;
+  --red-light-color: #ff7272;
   --pink-color: #f20058;
   --green-color: #00c305;
   --yellow-color: #ffb800;
