--- a/src/style/base/panel.css
+++ b/src/style/base/panel.css
@@ -14,6 +14,7 @@
   height: calc(100% - 2 * var(--spacing-content));
   display: flex;
   flex-direction: column;
+  flex-shrink: 0;
 }
 
 .smallPanelLeft-header-info {
@@ -32,10 +33,42 @@
   overflow-y: auto;
 }
 
+.smallPanel--white {
+  background-color: var(--white-color);
+  border-radius: var(--border-radius);
+}
+
+/* small panel header   */
+.smallPanel-header {
+  padding: var(--spacing-1) 0;
+  text-align: center;
+  background-color: var(--background-color);
+  font-weight: var(--font-weight-medium);
+  line-height: 50px;
+  letter-spacing: 1px;
+  border-bottom: 1px solid var(--border-color);
+  border-radius: var(--border-radius) var(--border-radius) 0 0;
+}
+
+/* small panel content  */
+.smallPanel-content {
+  padding: var(--spacing-2) var(--spacing-3);
+}
+
 /* big panel  */
 .bigPanelMiddle {
   flex-grow: 1;
+  overflow: auto;
   background-color: var(--white-color);
   display: flex;
   flex-direction: column;
+}
+
+/* loading  */
+.loading--right-panel.loading,
+.loading--right-panel .loading {
+  width: 80%;
+  color: transparent;
+  line-height: 2.4rem;
+  overflow: hidden;
 }
