--- a/src/style/chat.css
+++ b/src/style/chat.css
@@ -100,6 +100,7 @@
   flex-grow: 1;
   padding: var(--spacing-2);
   overflow-y: auto;
+  max-width: 100%;
   display: flex;
   flex-direction: column-reverse;
 }
