--- a/src/style/index.css
+++ b/src/style/index.css
@@ -84,6 +84,9 @@ html {
   font-weight: var(--font-weight-regular);
   line-height: calc(var(--font-size-4-2) + 0.2rem);
   margin: 0;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  hyphens: auto;
 }
 
 body {
