--- a/src/style/sidebar.css
+++ b/src/style/sidebar.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   transition: all 0.3s ease;
+  flex-shrink: 0;
 }
 
 .sidebar__icon-wrapper {
@@ -33,8 +34,6 @@
   display: flex;
   flex-direction: column;
 }
-
-
 
 .sidebar__user-name {
   color: var(--white-color);
