--- a/src/style/base/button.css
+++ b/src/style/base/button.css
@@ -25,9 +25,11 @@
 
 .btn--medium {
   font-weight: var(--font-weight-medium);
-  font-size: var(--font-size-4);
+  font-size: var(--font-size-5);
   line-height: calc(var(--font-size-4) + 0.2rem);
   min-width: 100px;
+  padding: var(--spacing-1) var(--spacing-3);
+  letter-spacing: 0.8px;
 }
 
 .btn--big {
@@ -35,6 +37,8 @@
   font-size: var(--font-size-3);
   line-height: calc(var(--font-size-3) + 0.2rem);
   min-width: 100px;
+  padding: var(--spacing-3) var(--spacing-3);
+  letter-spacing: 0.9px;
 }
 
 .btn--primary {
