--- a/src/style/index.css
+++ b/src/style/index.css
@@ -22,9 +22,8 @@
   --box-shadow--primary: 0px 1px 10px rgb(42 139 242 / 5%),
     1px 3px 20px rgb(42 139 242 / 2%), 1px 2px 20px rgb(42 139 242 / 5%);
 
-  --box-shadow: 0px 1px 10px rgba(151, 151, 151, 0.15),
-    1px 3px 20px rgba(151, 151, 151, 0.05),
-    1px 2px 20px rgba(151, 151, 151, 0.15);
+  --box-shadow: -1px -1px 10px -7px rgba(151, 151, 151, 0.3),
+    1px 1px 10px -2px rgba(151, 151, 151, 0.3);
 
   --linear-color: linear-gradient(92.68deg, #7cb8f7 0%, #2a8bf2 100%);
 
