--- a/src/style/modals.css
+++ b/src/style/modals.css
@@ -6,9 +6,16 @@
   right: 0;
   background-color: rgba(151, 151, 151, 0.6);
   animation: opacityTo 0.2s ease-in-out;
+  z-index: 2;
 }
 
 .modal-wrapper {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto auto;
   width: 420px;
   max-height: 90%;
   min-height: 500px;
@@ -17,6 +24,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  z-index: 2;
   animation: scaleTo 0.3s ease-in-out;
 }
 
@@ -87,18 +95,31 @@
 }
 
 /* modal create chat  */
-#create-chat-modal__modal {
+#create-chat-modal__modal,
+#create-chat-modal__label {
   display: none;
 }
 
+#create-chat-modal:checked ~ #create-chat-modal__label,
 #create-chat-modal:checked ~ #create-chat-modal__modal {
   display: flex;
 }
 
-.modal__body__contacts {
+.modal__body__list {
   width: 100%;
   flex-grow: 1;
   height: 0;
   margin-top: var(--spacing-2);
   overflow-y: auto;
+}
+
+/* modal add members chat  */
+#add-member-in-chat-modal__modal,
+#add-member-in-chat-modal__label {
+  display: none;
+}
+
+#add-member-in-chat-modal:checked ~ #add-member-in-chat-modal__modal,
+#add-member-in-chat-modal:checked ~ #add-member-in-chat-modal__label {
+  display: flex;
 }
