add logic to popup menu usercard

--- a/src/style/base/popupMenu.css
+++ b/src/style/base/popupMenu.css
@@ -1,6 +1,7 @@
 .popupMenu {
   background-color: var(--white-color);
   min-width: 150px;
+  box-shadow: var(--box-shadow);
 }
 
 .popupMenu__item {
