add not found page, add constants.js and images/index.js

--- a/src/style/dashboard.css
+++ b/src/style/dashboard.css
@@ -32,7 +32,35 @@
   line-height: 4rem;
 }
 
+.background__header--medium {
+  font-weight: var(--font-weight-bold);
+  color: var(--text-x-light-color);
+}
+
 .background__text {
   letter-spacing: 2px;
   line-height: 2rem;
+}
+
+.background__text--light {
+  color: var(--text-x-light-color);
+}
+
+.background__text--link {
+  text-decoration: underline;
+  color: var(--text-x-light-color);
+  cursor: pointer;
+}
+
+.background__text--link:hover {
+  color: var(--primary-light-color);
+  font-weight: var(--font-weight-medium);
+}
+
+.background__image--404 {
+  height: 50%;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
